fixed add light 2
