# swagger-output.json
@@ -42,6 +42,12 @@
                 "Name": {
                   "example": "any"
                 },
+                "houseId": {
+                  "example": "any"
+                },
+                "roomId": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 }
@@ -52,6 +58,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -70,26 +79,15 @@
         "description": "",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "UUID": {
-                  "example": "any"
-                },
                 "Login": {
                   "example": "any"
                 },
                 "password": {
-                  "example": "any"
-                },
-                "email": {
                   "example": "any"
                 }
               }
@@ -99,12 +97,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
